...
    <string name="opening_balance_saved">Stan konta został zapisany.</string>
    <string name="opening_balance_save">Zapisz stan konta</string>
    <string name="opening_balance_make_positive">Zmień znak kwoty na dodatni</string>
    <string name="opening_balance_make_negative">Zmień znak kwoty na ujemny</string>
    <string name="opening_balance_positive">Kwota nieujemna</string>
    <string name="opening_balance_negative">Kwota ujemna</string>
    <string name="offline_indicator_description">Brak połączenia z internetem. Pokaż informacje o trybie offline</string>
    <string name="offline_tooltip">Brak połączenia z internetem. Możesz korzystać z zapisanych danych. Zmiany zsynchronizują się po odzyskaniu połączenia.</string>
    <string name="app_name">Thesaurus</string>
    <string name="accessibility_loading">Ładowanie danych</string>
    <string name="navigation_entries">Wpisy</string>
    <string name="navigation_summary">Podsumowanie</string>
    <string name="navigation_browse">Przegląd</string>
...
